course overlap fix

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -210,9 +210,7 @@ height: 96vh;
     background: none;
     padding-top: 0;
     > div{
-    //   display: flex;
-    // flex-wrap: wrap;
-    // gap: 2rem;
+      gap: 24px 0px;
     .course-container {
       .course-title{
         color: black;
@@ -223,6 +221,15 @@ height: 96vh;
       }
     }
     }
+  }
+}
+.programcataloguepage{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  .programlist-wrapper{
+    height: auto;
+    flex: 1;
   }
 }
 
